[package]
name = "logic"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"

[dependencies]
gdnative = "0.9"
crc = "1.8"
serde = "1.0"
serde_json = "1.0"
rapier2d = { version = "0.5", features = ["enhanced-determinism","serde-serialize"] }

[build-dependencies]
gdnative-project-utils = { git="https://github.com/extrawurst/project-utils.git", rev="ff98e88" } 
# gdnative-project-utils = {version="0.1",path="../../project-utils"}

[lib]
crate-type = ["cdylib","staticlib"]