[package]
name = "logic"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"

[dependencies]
gdnative = "0.9"
crc = "1.8"
serde = "1.0"
serde_json = "1.0"
rapier2d = { version = "0.5", features = ["enhanced-determinism","serde-serialize"] }
cpal = {path="../../cpal"}
ringbuf = "0.1.6"

[build-dependencies]
gdnative-project-utils = "0.1.4"

[lib]
crate-type = ["cdylib","staticlib"]