[package]
name = "logic"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
gdnative = "0.9"
crc = "1.8"
serde = "1.0"
serde_json = "1.0"
rapier2d = { version = "0.7", features = ["enhanced-determinism","serde-serialize"] }

[build-dependencies]
gdnative-project-utils = "0.1.4"

[lib]
crate-type = ["cdylib","staticlib"]

[patch.crates-io]
instant = { git = "https://github.com/sebcrozet/instant.git", rev="ebce2bb" }
serde = { git = "https://github.com/extrawurst/serde.git", rev="7c3ad4b" }

# emscripten will only work in release build
[profile.release]
# debug = true      
# opt-level = 1     # easier debugging
opt-level = "s"     # smaller library
lto = true          # wont work without lto